# packages/database/src/schema/index.ts
@@ -14,3 +14,4 @@ export * from './migration.js';
 export * from './compat.js';
 export * from './pos.js';
 export * from './hrm.js';
+export * from './projects.js';
